# zero_to_production

hello-world/: Cargo.toml  Dockerfile  Readme.md  configuration.yaml  docker-compose.yaml
hello-world/.sqlx/: query-4a5c318f56562e66fdc0c78122d641201c2482e33c56c61540667fa02751ee3d.json
hello-world/configuration/: base.yaml  production.yaml
hello-world/migrations/: 20250214103957_create_subscriptions_table.sql  20250227175107_create_subscription_tokens_table.sql  20250314124017_seed_user.sql
hello-world/scripts.sh/: init_db.sh  init_redis.sh
hello-world/src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
hello-world/src/domain/: subscriber_email.rs  subscriber_name.rs
hello-world/src/routes/: authentication.rs  health_check.rs  kok_sehife.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
hello-world/src/routes/admin/: dashboard.rs  mod.rs
hello-world/src/routes/home/: home.html  mod.rs
hello-world/src/routes/login/: get.rs  mod.rs  post.rs
hello-world/tests/: health_check.rs
hello-world/tests/api/: admin_dashboard.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
