[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde={version = "1", features = ["derive"]}
config="0.13"
uuid={version = "1", features = ["v4"]}
chrono={version = "0.4.22", default-features = false, features = ["clock"]}
log = "0.4"
tracing={version = "0.1", features = ["log"]}
tracing-subscriber ={ version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter="0.3"
tracing-log="0.1"
secrecy={version = "0.8", features = ["serde"]}
tracing-actix-web="0.7"
serde-aux="4"
unicode-segmentation="1.12.0"
claims = "0.7"
validator = "0.16"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
sha3 = "0.9"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"

hex = "0.4"




[dev-dependencies]
reqwest = "*"
once_cell="1"
fake = "~2.3"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"



[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]